# email-ingestion

./: .env.example  CODEX.md  README.md  pyproject.toml
email_ingestion/: __init__.py  __main__.py  cli.py  config.py
email_ingestion/db/: models.py  repo.py  session.py
email_ingestion/heads/: __init__.py  base.py  calendar_invite.py  docx.py  email_body.py  image.py  msg.py  pdf.py  pptx.py
email_ingestion/normalize/: calendar.py  email.py
email_ingestion/outlook/: __init__.py  fetcher.py  mapi.py
email_ingestion/output/: __init__.py  text_dump.py
email_ingestion/pipeline/: orchestrator.py  router.py
email_ingestion/storage/: cas.py
email_ingestion/util/: hashing.py  json.py  logging.py  time.py
tests/: test_docx_head.py  test_ids.py  test_router.py
